--- a/wp-content/themes/dwp-wordpress-jointswp/assets/scss/partials/_author.scss
+++ b/wp-content/themes/dwp-wordpress-jointswp/assets/scss/partials/_author.scss
@@ -10,7 +10,7 @@ body.author{
       justify-content: center;
       flex-wrap: wrap;
       width: 100%;
-      text-align: center;
+      // text-align: center;
   }
   .article-thumbnail{
     min-width: 300px;
